# py-animate

./: LICENSE  README.md  Releases and To do.md  setup.cfg  setup.py
examples/: README.md
examples/01-bulldozer/: Bulldozer.xls  Bulldozer.xlsx  Readme.md
examples/02-Bulldozer with-table/: BulldozerTable.py
examples/02-bulldozer-with-table/: BulldozerTable.xlsx  Readme.md
examples/03-solar-system/: Readme.md  SolarSystem.py  SolarSystem.xls  SolarSystem.xlsx
examples/04-Rotating-text/: Text.py
examples/04-rotating-text/: Readme.md  Text.xls  Text.xlsx
examples/05-rotating-cloud/: Readme.md  RotatingCloud.py  RotatingCloud.xls  RotatingCloud.xlsx
examples/06-Bulldozer-with-bucket/: BulldozerBucket.xlsx
examples/06-bulldozer-with-bucket/: BulldozerBucket.py  BulldozerBucket.xls  BulldozerBucket.xlsx  Readme.md  __logfile.txt
examples/07-Bouncing-balls/: BouncingBalls.xls
examples/07-bouncing-balls/: BouncingBalls.py  BouncingBalls.xlsx  Readme.md
examples/08-Two-cylinders/: TwoCylinders.py
examples/08-two-cylinders/: Readme.md  TwoCylinders.py  TwoCylinders.xls  TwoCylinders.xlsx
examples/09-Canvas/: CanvasDemo.py  CanvasDemo.xls
examples/09-canvas/: CanvasDemo.py  CanvasDemo.xls  CanvasDemo.xlsx  Readme.md
examples/10-Car/: CarDemo.xls
examples/10-car/: CarDemo.py  CarDemo.xlsx
examples/11-camera/: Camera.py  Camera.xls  Camera.xlsx  Readme.md
examples/12-sewing-machine/: Readme.md  SewingMachine.ods  SewingMachine.py  SewingMachine.xls  SewingMachine.xlsx
examples/13-test-video/: BulldozerTable.py  BulldozerTable.xls  BulldozerTable.xlsx  TestVideo.py  __logfile.txt  movie-asus-pc.mpeg  movie-hp-pc.mpeg  readme.md  remarks-test-video.md
examples/14-opacity/: OpacityDemo.py  OpacityDemo.xls  OpacityDemo.xlsx  __logfile.txt
examples/Example 01 - Bulldozer/: Bulldozer.py  Bulldozer.xlsx  __logfile.txt
examples/Example 02 - Bulldozer with table/: BulldozerTable.xlsx
examples/Example 03 - Solar System/: SolarSystem.xls
examples/Example 04 - Rotating text/: Text.xlsx
examples/Example 05 - Rotating cloud/: RotatingCloud.xlsx
examples/Example 08 - Two cylinders/: TwoCylinders.xlsx
examples/Example 12 - Sewing machine/: SewingMachine.py
examples/ex01-bulldozer/: Bulldozer.py
examples/ex02-bulldozer-with-table/: BulldozerTable.xls
examples/ex03-solar-system/: Readme.md  SolarSystem.xls
(+33 files in other folders)
