[metadata]
name = py-animate
version = 1.0.4
author = HenkJan van der Pol
author_email = henkjannospam@gmail.com
description = Create 2D animations, movies and animated gifs
long_description = https://github.com/henkjannl/py-animate/blob/main/README.md
long_description_content_type = text/markdown
url = https://github.com/henkjannl/py-animate.git
project_urls =
    Bug Tracker = https://github.com/henkjannl/py-animate/issues
classifiers =
    Programming Language :: Python :: 3
    License :: OSI Approved :: MIT License
    Operating System :: OS Independent

[options]
package_dir =
    = src
packages = find:
python_requires = >=3.0

[options.packages.find]
where = src