[metadata]
name = py-animate
version = 1.0.8
author = HenkJan van der Pol
author_email = henkjannospam@gmail.com
description = Animate is an interpreter written in Python which reads commands from an Excel file and some bitmap images and composes an animation with these commands. It can make simple animations, but also much more complex ones. No Python knowledge is needed to use the library.
long_description = https://github.com/henkjannl/py-animate/blob/main/README.md
long_description_content_type = text/markdown
url = https://github.com/henkjannl/py-animate.git
project_urls =
    Bug Tracker = https://github.com/henkjannl/py-animate/issues
classifiers =
    Programming Language :: Python :: 3
    License :: OSI Approved :: MIT License
    Operating System :: OS Independent

[options]
package_dir =
    = src
packages = find:
python_requires = >=3.0

[options.packages.find]
where = src